[gd_scene load_steps=2 format=3 uid="uid://cl3tytt2x1dfk"]

[ext_resource type="Script" path="res://test_run.gd" id="1_055c1"]

[node name="TestRun" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_055c1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -38.5
offset_right = 143.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="TestRunGridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/TestRunGridContainer"]
layout_mode = 2
text = "Press this to SHOW hidden text. "

[node name="ActionToShowText" type="Label" parent="VBoxContainer/TestRunGridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/TestRunGridContainer"]
layout_mode = 2
text = "press this to HIDE shown text.  "

[node name="ActionToHideText" type="Label" parent="VBoxContainer/TestRunGridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/TestRunGridContainer"]
layout_mode = 2
text = "Press this to go to the key bindings.  "

[node name="ActionToChangeScene" type="Label" parent="VBoxContainer/TestRunGridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextShownOrHidden" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
text = "
This is either hidden or shown."
